@@ -50,6 +50,10 @@ select {
     box-shadow: $form-box-shadow-focus;
     outline: none;
   }
+
+  @include placeholder {
+    color: $hint-grey;
+  }
 }
 
 textarea {
